# scheduler-demos

./: .env.sample  .gitignore  .http  Cargo.toml  DOCS.md  Justfile  vercel.cargo-config.toml
.cargo/: config.json  config.local.toml  config.musl.toml
api/: handler.rs
src/: lib.rs  sms.rs
