[package]
name = "scheduler-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
http = "1.0"

[[bin]]
name = "handler"
path = "api/handler.rs"
