[package]
name = "scheduler-demo"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tokio-stream = { version = "0.1", features = ["net"] }
http = "1.0"
ujumbe_sms = "1.1.0"
urlencoding = "2.1"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.0", features = ["v4"] }

[[bin]]
name = "handler"
path = "api/handler.rs"
